--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "update": "vite build; cp dist -r ../../part3/phonebook_backend; cd ../../part3/phonebook_backend; npm run dev",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
